--- a/Kingsman.html
+++ b/Kingsman.html
@@ -5,12 +5,12 @@
         <title>Movie review</title>        
     </head>
     
- <!-->   <style>
+  <style>
         body{
-            background-image: url(https://goo.gl/images/54VC6M)
+            body{ background-image: url(http://cdn2-www.comingsoon.net/assets/uploads/2016/04/kingsman2header2.png); background-size: 100%; } 
         }
     </style>
-<!-->
+
     
 <body>
     <h1>Kingsman the golden circle</h1>    
