--- a/Voorstelling.html
+++ b/Voorstelling.html
@@ -21,7 +21,8 @@
             Daarvoor heb ik industriële wetenschappen gestudeerd. <br>
             Ik heb besloten om verder te gaan in informatica, omdat ik later en programmeur wil worden<br>            
         </p>
-        
+        <h2>Hobby's</h2>
+        <p>Ik heb 1 hobby namelijk duiken</p>
         
     </body>
 </html>  
